--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack -p 3005",
+        "dev": "next dev -p 3005",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
-        "react": "^19.2.0",
-        "react-dom": "^19.2.0",
-        "next": "15.5.5"
+        "react": "^19.2.1",
+        "react-dom": "^19.2.1",
+        "next": "16.0.7"
     },
     "devDependencies": {
         "typescript": "^5.9.3",
-        "@types/node": "^24.7.2",
-        "@types/react": "^19.2.2",
-        "@types/react-dom": "^19.2.2",
-        "@tailwindcss/postcss": "^4.1.14",
-        "tailwindcss": "^4.1.14",
-        "eslint": "^9.37.0",
-        "eslint-config-next": "15.5.5",
-        "@eslint/eslintrc": "^3.3.1"
+        "@types/node": "^24.10.1",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
+        "@tailwindcss/postcss": "^4.1.17",
+        "tailwindcss": "^4.1.17",
+        "eslint": "^9.39.1",
+        "eslint-config-next": "16.0.7",
+        "@eslint/eslintrc": "^3.3.3"
     }
 }
