--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-    "name": "french-departments",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev -p 3005",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "react": "^19.2.1",
-        "react-dom": "^19.2.1",
-        "next": "16.0.7"
-    },
-    "devDependencies": {
-        "typescript": "^5.9.3",
-        "@types/node": "^24.10.1",
-        "@types/react": "^19.2.7",
-        "@types/react-dom": "^19.2.3",
-        "@tailwindcss/postcss": "^4.1.17",
-        "tailwindcss": "^4.1.17",
-        "eslint": "^9.39.1",
-        "eslint-config-next": "16.0.7",
-        "@eslint/eslintrc": "^3.3.3"
-    }
+  "name": "french-departments",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 3005",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "next": "16.0.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@tailwindcss/postcss": "^4.1.17",
+    "tailwindcss": "^4.1.17",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "16.0.7"
+  }
 }
