--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "french-departments",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev -p 3005",
-        "build": "next build",
-        "start": "next start",
-        "lint": "eslint ."
-    },
-    "dependencies": {
-        "react": "^19.2.3",
-        "react-dom": "^19.2.3",
-        "next": "16.0.10"
-    },
-    "devDependencies": {
-        "typescript": "^5.9.3",
-        "@types/node": "^25.0.2",
-        "@types/react": "^19.2.7",
-        "@types/react-dom": "^19.2.3",
-        "@tailwindcss/postcss": "^4.1.18",
-        "tailwindcss": "^4.1.18",
-        "eslint": "^9.39.2",
-        "eslint-config-next": "16.0.10"
-    }
+  "name": "french-departments",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev -p 3005",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "next": "^16.1.6"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3",
+    "@types/node": "^25.0.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.0.10"
+  }
 }
